@startuml class model

package tictactoe{

    class TicactoeApp{
        -Ticactoe tictactoe
        -TurnController turnController
        -PlayerController playerController
        -BoardController boardController
        +void runGame()
    }

    package controller{
        class TictactoeController{

        }

        class TurnController{

        }
        package player{

            class PlayerController{

            }

            class HumanPlayerController{

            }

            class IAPlayerController{

            }

            HumanPlayerController -up-|> PlayerController
            IAPlayerController -up-|> PlayerController

        }


        class BoardController{

        }
        class HistoryController{

        }

        TictactoeController -->TurnController



        TurnController --> PlayerController
        TurnController --> BoardController
        TurnController --> HistoryController

    }

    package view{
        class BoardView{

        }

        class PlayerView{

        }

        class TurnView{

        }

        class TictactoeView{

        }

        class HumanPlayerView{

        }

        class IAPlayerView{

        }
        TictactoeView ..> TurnView
        TurnView ..> BoardView
        TurnView ..> PlayerView

        HumanPlayerView -up-|> PlayerView
        IAPlayerView -up-|> PlayerView

    }

    package model {
        class Tictactoe{
            -Board board
            -Turn turn
            -Player[2] players
        }


        package board{
            class Board{

            }

            enum Mark{
                X
                O
                EMPTY
            }


            class Coordinate{

            }

            enum PutMarkError{
                NOT_EMPTY
                WRONG_COORDINATES
                NO_ERROR
            }

            enum TTTLine{
                ROW
                COLUMN
                DIAGONAL
                INVERTED_DIAGONAL
            }

        }

        class Result

        class Turn{

        }

        class Player{

        }



        Tictactoe *-- Board
        Tictactoe *-- Turn
        Tictactoe *-- Player:2
        Board *-- Mark:3X3
    }


    TicactoeApp *-- TictactoeController





    TictactoeController -right-> TictactoeView
    TictactoeController --> Tictactoe
    TurnController -right-> TurnView
    TurnController --> Turn

}

skinparam monochrome reverse

@enduml
